kasane-plugin-sdk/tests/fail/define_plugin_on_init.rs
kasane_plugin_sdk::define_plugin! {
    id: "bad_on_init",

    on_init() {
        Effects::default()
    },
}

fn main() {}
